ent/internal/preprocess/virus.go

//line virus.rl:1
package preprocess

func IsVirus(data []byte) bool {
  
//line virus.go:8
const virus_start int = 0
const virus_first_final int = 63
const virus_error int = -1

const virus_en_main int = 0


//line virus.rl:7


  cs, p, pe, eof := 0, 0, len(data), len(data)
  _ = eof
  _ = virus_en_main
  _ = virus_error
  _ = virus_first_final

  var match bool

  
//line virus.go:28
	{
	cs = virus_start
	}

//line virus.go:33
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 63:
		goto st_case_63
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	}
	goto st_out
	st0:
		if p++; p == pe {
			goto _test_eof0
		}
	st_case_0:
		switch data[p] {
		case 65:
			goto st6
		case 66:
			goto st27
		case 73:
			goto st39
		case 78:
			goto st3
		case 80:
			goto st44
		case 83:
			goto st11
		case 86:
			goto st54
		case 97:
			goto st6
		case 98:
			goto st27
		case 110:
			goto st3
		case 112:
			goto st44
		case 115:
			goto st11
		case 118:
			goto st54
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 67 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 99:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto st0
				}
			case data[p] >= 9:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto st0
				}
			case data[p] >= 91:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 78:
			goto st3
		case 86:
			goto st21
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		switch data[p] {
		case 78:
			goto st3
		case 80:
			goto st4
		case 86:
			goto st21
		case 110:
			goto st3
		case 112:
			goto st4
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		switch data[p] {
		case 78:
			goto st3
		case 86:
			goto st5
		case 110:
			goto st3
		case 118:
			goto st5
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch data[p] {
		case 73:
			goto st22
		case 78:
			goto st3
		case 86:
			goto st21
		case 105:
			goto st22
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto tr13
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto tr13
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto tr13
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto tr13
			}
		default:
			goto tr13
		}
		goto st1
tr13:
//line virus.rl:18
match = true
	goto st63
	st63:
		if p++; p == pe {
			goto _test_eof63
		}
	st_case_63:
//line virus.go:487
		switch data[p] {
		case 65:
			goto st6
		case 66:
			goto st27
		case 73:
			goto st39
		case 78:
			goto st3
		case 80:
			goto st44
		case 83:
			goto st11
		case 86:
			goto st54
		case 97:
			goto st6
		case 98:
			goto st27
		case 110:
			goto st3
		case 112:
			goto st44
		case 115:
			goto st11
		case 118:
			goto st54
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 67 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 99:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 76:
			goto st7
		case 78:
			goto st3
		case 86:
			goto st21
		case 108:
			goto st7
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 78:
			goto st3
		case 80:
			goto st8
		case 86:
			goto st21
		case 110:
			goto st3
		case 112:
			goto st8
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		switch data[p] {
		case 72:
			goto st9
		case 78:
			goto st3
		case 86:
			goto st21
		case 104:
			goto st9
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		switch data[p] {
		case 65:
			goto st10
		case 78:
			goto st3
		case 86:
			goto st21
		case 97:
			goto st10
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 66 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 98:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		switch data[p] {
		case 78:
			goto st3
		case 83:
			goto st11
		case 86:
			goto st21
		case 110:
			goto st3
		case 115:
			goto st11
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		switch data[p] {
		case 65:
			goto st12
		case 78:
			goto st3
		case 86:
			goto st21
		case 97:
			goto st12
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 66 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 98:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 78:
			goto st3
		case 84:
			goto st13
		case 86:
			goto st21
		case 110:
			goto st3
		case 116:
			goto st13
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		switch data[p] {
		case 69:
			goto st14
		case 78:
			goto st3
		case 86:
			goto st21
		case 101:
			goto st14
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		switch data[p] {
		case 76:
			goto st15
		case 78:
			goto st3
		case 86:
			goto st21
		case 108:
			goto st15
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		switch data[p] {
		case 76:
			goto st16
		case 78:
			goto st3
		case 86:
			goto st21
		case 108:
			goto st16
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		switch data[p] {
		case 73:
			goto st17
		case 78:
			goto st3
		case 86:
			goto st21
		case 105:
			goto st17
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch data[p] {
		case 78:
			goto st3
		case 84:
			goto st18
		case 86:
			goto st21
		case 110:
			goto st3
		case 116:
			goto st18
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch data[p] {
		case 69:
			goto st19
		case 78:
			goto st3
		case 86:
			goto st21
		case 101:
			goto st19
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 78:
			goto st3
		case 83:
			goto st20
		case 86:
			goto st21
		case 110:
			goto st3
		case 115:
			goto st20
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto tr13
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto tr13
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto tr13
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto tr13
			}
		default:
			goto tr13
		}
		goto st1
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch data[p] {
		case 78:
			goto st3
		case 86:
			goto st21
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto tr13
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto tr13
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto tr13
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto tr13
			}
		default:
			goto tr13
		}
		goto st1
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch data[p] {
		case 73:
			goto st22
		case 78:
			goto st3
		case 86:
			goto st21
		case 105:
			goto st22
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch data[p] {
		case 78:
			goto st3
		case 82:
			goto st23
		case 86:
			goto st21
		case 110:
			goto st3
		case 114:
			goto st23
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch data[p] {
		case 78:
			goto st3
		case 85:
			goto st24
		case 86:
			goto st21
		case 110:
			goto st3
		case 117:
			goto st24
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		switch data[p] {
		case 78:
			goto st3
		case 83:
			goto st25
		case 86:
			goto st21
		case 110:
			goto st3
		case 115:
			goto st25
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		switch data[p] {
		case 69:
			goto st26
		case 78:
			goto st3
		case 86:
			goto st21
		case 101:
			goto st26
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto tr13
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto tr13
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto tr13
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto tr13
			}
		default:
			goto tr13
		}
		goto st1
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		switch data[p] {
		case 78:
			goto st3
		case 83:
			goto st20
		case 86:
			goto st21
		case 110:
			goto st3
		case 115:
			goto st20
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		switch data[p] {
		case 65:
			goto st28
		case 69:
			goto st38
		case 78:
			goto st3
		case 86:
			goto st21
		case 97:
			goto st28
		case 101:
			goto st38
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 66 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 98:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch data[p] {
		case 67:
			goto st29
		case 78:
			goto st3
		case 86:
			goto st21
		case 99:
			goto st29
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 78:
			goto st3
		case 84:
			goto st30
		case 86:
			goto st21
		case 110:
			goto st3
		case 116:
			goto st30
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		switch data[p] {
		case 69:
			goto st31
		case 78:
			goto st3
		case 86:
			goto st21
		case 101:
			goto st31
		case 110:
			goto st3
		case 118:
			goto st21
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st0
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st2
				}
			default:
				goto st0
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st2
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st0
					}
				case data[p] >= 97:
					goto st2
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st1
	st31:
